--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
