--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^18.16.3",
     "nodemon": "^2.0.22",
+    "react-router-dom": "^6.11.1",
     "socket.io": "^4.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
