--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.10.8",
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
